# selimslab.github.io

./: .gitignore  2023-09-04.md  404.html  404.md  CNAME  Gemfile  LICENSE  README.md  Untitled.md  _config.yml  about.md  algorithms.md  art.json  atomicity.md  books.html  business.html  db-consistency.md  essais.md  frontmatter.json  img.json  index.html  index.md  manifest.json  models.md  music.md  notes.md  offline.js  package-lock.json  package.json  partitioning.md  projects.md  projectss.html  psy.md  pub.md  public.md  readme.md  rename.py  resume.md  robots.txt  rss.md  (+22 more)
tools/: chunk.py  epub.py  gist.md  hncomms.py  image.md  index_connections_analysis.md  notes.md  out.txt  pyproject.toml  readme.md  requirements.txt  ytd.py  ytt.py
tools/.claude/: CLAUDE.md  long-prompt.md  open.sh  short-prompt.md
tools/_HISTORY/: 1-map-data-formats.md  4-fencing-tokens.md  7-processes-summary.md  8-concurrency-threads-summary.md  9-sockets-introduction-summary.md
tools/_NOTES/: dist.md  pg-isolation.md  real-time-sys.md  til.md  vim.md
tools/algo/: bits.go  bits_test.go  tree.go  tree_test.go
tools/draft/: scale.md
tools/drafts/: authentic-self.md  body.md  cons.md  entity_extractor.py  inner-child.md  judge.md  link_extractor.py  lrms.md  office-pols.md  trauma.md
tools/history/: ch04-rate-limiter-summary.md  ch04-rate-limiter-summary0.md  ch05-consistent-hashing-summary.md  ch05-replication-summary.md  ch23-negotiation-leadership-summary.md  chapter-01-scale-from-zero-to-millions.md  chapter-02-back-of-envelope-estimation.md  chapter-04-design-rate-limiter.md  (+12 more)
(+7305 files in other folders)
