[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "ebooklib>=0.19",
    "html2text>=2024.2.26",
    "loguru>=0.7.3",
    "pymupdf>=1.26.1",
    "rich>=14.0.0",
    "ruff>=0.11.10",
    "youtube-transcript-api>=1.1.0",
    "yt-dlp>=2025.4.30",
]
